# Spread-Gold-Pred

./: Batch_Predict.py  Home.py  Market_Inteligence.py  README.md  pyproject.toml  requirements.txt  streamlit_app.py
.streamlit/: config.tolm
data/: dataset.csv  dataset.xlsx  final_model_comparison (1).csv  final_model_comparison (2).csv
models/: bilstm.keras  bilstm_feature_scaler.pkl  bilstm_metrics.csv  bilstm_model.keras  catboost.pkl  catboost_metrics.csv  decision_tree.pkl  decision_tree_metrics.csv  feature_names (1).pkl  features.pkl  gru.keras  gru_metrics.csv  gru_model.keras  gru_target_scaler.pkl  lightgbm.pkl  lightgbm_metrics.csv  linear_pipeline.pkl  linear_regression.pkl  linear_regression_actual_vs_pred_test.csv  linear_regression_coefficients.csv  linear_regression_metrics.csv  lstm.keras  lstm_metrics.csv  lstm_model.keras  metadata (1).pkl  ridge_metrics.csv  ridge_pipeline.pkl  ridge_regression.pkl  scaler.pkl  std_scaler.pkl  xgboost (1).pkl  xgboost_metrics.csv
pages/: Data_Analysis.py  Home.py  Market_Intelligence.py  Model_Results.py  Predict.py  __init__.py
