[project]
name = "streamlit-app"
version = "0.1.0"
requires-python = ">=3.13,<3.14"

dependencies = [
    "streamlit==1.58.0",
    "openpyxl==3.1.5",
    "plotly==6.8.0",
    "joblib==1.5.3",
    "scikit-learn==1.9.0",
    "statsmodels==0.14.6",
    "seaborn==0.13.2",
    "pandas==3.0.3",
    "numpy==2.4.6",
    "matplotlib==3.11.0",
    "tensorflow==2.21.0",
    "lightgbm==4.6.0"
]

[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"